# HHE-Kombat

./: .clang-format  .gitignore  README.md  repo_readme_references_section.md  security_level_normalization.md
benchmarking-utilities/c/: README.md  utils.c  utils.h
benchmarking-utilities/c/utils/: CMakeLists.txt  printer.cpp
benchmarking-utilities/go/utils/: benchmarking_utils.go  rdtsc.go
benchmarking-utilities/python/: README.md
benchmarking-utilities/rust/: Cargo.toml  README.md  lib.rs
frameworks/AES/: README.md
frameworks/AES/BtR_framework/: go.mod
frameworks/AES/FbT/: CMakeLists.txt  README.md  install_openfhe.sh  profile.profraw
frameworks/AES/FbT/aestrans/include/: AESState.h  FieldOperations.h
frameworks/AES/FbT/aestrans/src/: AESState.cpp  Fieldoperations.cpp
frameworks/AES/FbT/bitdecomp/include/: BitIncreasePrecision.h  LUTEvalParams.h  LUTEvaluator.h  RLWEKeyswitching.h
frameworks/AES/FbT/bitdecomp/include/RLWESwitchingMethods/: RKSKDecimation.h  RKSKDecimationFast.h  RKSKDigitPrecomp.h  RKSKDigitPrecompFast.h  RKSKNoPrecomp.h  RKSKNoPrecompFast.h  RLWEKeyswitchInterface.h
frameworks/AES/FbT/bitdecomp/src/: BitIncreasePrecision.cpp  LUTEvaluator.cpp
frameworks/AES/FbT/bitdecomp/src/RLWESwitchingMethods/: RKSKDecimation.cpp  RKSKDecimationFast.cpp  RKSKDigitPrecomp.cpp  RKSKDigitPrecompFast.cpp  RKSKNoPrecomp.cpp  RKSKNoPrecompFast.cpp
frameworks/AES/FbT/example/: example_aes.cpp  example_bitdecomp.cpp  example_functional_keyswitch.cpp  example_increase_precision.cpp
frameworks/AES/FbT/libs/openfhe/include/openfhe/binfhe/: binfhe-base-scheme.h  binfhe-base-scheme.h.rej  binfhe-constants.h  binfhe-constants.h.rej
frameworks/AES/FbT/libs/openfhe/lib/OpenFHE/: OpenFHEConfig.cmake  OpenFHETargets.cmake
frameworks/AES/FbT/patches/: include.patch  lib.patch  lib_noiseless.patch
frameworks/AES/FbT/related_work_scripts/: estimate_fail_wwlll.py  tsbs_sec.sage
frameworks/AES/FbT/utils/: printer.h
frameworks/AES/Full-LUT/: CMakeLists.txt  README.md
frameworks/AES/Full-LUT/sources/: aes.cpp  aes.h  base_b_keyswitch.cpp  bootstrapping.cpp  main.cpp  tlwekeyswitch.cpp
frameworks/AES/Full-LUT/utils/: utils.c
frameworks/AES/TFHElib/full-LUT/sources/: CMakeLists.txt  annex.cpp  annex.h  base_b_keyswitch.h  base_b_keyswitchkey.cpp  base_b_keyswitchkey.h  bootstrapping.h  main.cpp  tables.cpp  tables.h  tlwe-functions-extra.cpp  tlwe-functions-extra.h  tlwekeyswitch.h
frameworks/AES/TFHEpp/Fregata/CBSmode/homoSM4_CB/: AES.cpp  AES.h  AES_bkp.cpp  CMakeLists.txt  sym_aes.cpp
frameworks/AES/TFHErs/FFT_CB/: Cargo.toml  README.md
frameworks/AES/TFHErs/FFT_CB/benches/: bench_aes.rs  bench_hp_lhe.rs  utils.rs
frameworks/AES/TFHErs/FFT_CB/fft_error_analysis/: aes_half_cbs.sage  hp_lhe.sage
frameworks/AES/TFHErs/FFT_CB/src/: aes_he.rs  aes_params.rs  lib.rs  pbs.rs  utils.rs  wwlp_cbs_instance.rs
frameworks/AES/TFHErs/FFT_CB/tests/: test_aes.rs
frameworks/AES/Tinyaes/: CMakeLists.txt
frameworks/AES/Tinyaes/src/: aes_encrypt.c
frameworks/AES/Tinyaes/tiny/: CMakeLists.txt
frameworks/AES/Tinyaes/utils/: utils.h
frameworks/AES/openssl/: CMakeLists.txt
frameworks/AES/openssl/src/: aes_encrypt.c
frameworks/FRAST/: README.md
frameworks/FRAST/frast/: Cargo.toml
frameworks/FRAST/frast/src/: lib.rs
frameworks/FRAST/frast/tests/: frast.rs
frameworks/Transistor/: LICENSE  README.md  reference.py
frameworks/Transistor/homomorphic_implementation/homomorphic_transistor/: Cargo.toml  README.md
frameworks/Transistor/homomorphic_implementation/homomorphic_transistor/src/: lfsr.rs  main.rs  parameters.rs  shake.rs
frameworks/elisabeth/: .gitignore  Cargo.toml  README.md
frameworks/fasta/: .gitignore  CMakeLists.txt  LICENSE  README.md
frameworks/fasta/hhe/: CMakeLists.txt
frameworks/fasta/hhe/fasta/: fasta_helib.cpp
frameworks/fasta/hhe/rasta/: matrix_1.txt  matrix_2.txt  matrix_5.txt  matrix_6.txt  matrix_7.txt  rasta_helib.cpp
frameworks/fasta/hhe/rasta_pack/: matrixFromFile.h  matrix_1.txt  matrix_2.txt  matrix_3.txt  matrix_4.txt  matrix_5.txt  matrix_6.txt  rasta_pack_helib.cpp
frameworks/fasta/hhe/rasta_tfhe/: matrix_3.txt  matrix_4.txt  rasta_tfhe.c
frameworks/fasta/sym/: CMakeLists.txt  Fasta.c  Fasta.h  bitVector.c  bitVector.h  fasta_sym.c  originalPlaintext.txt
frameworks/filip/rust/: Cargo.toml  README.md
frameworks/hheFramework/: .gitignore  automate_tests.sh
frameworks/margrethe/: Makefile  README.md  main_cipher  main_cipher.c  main_cipher_mp  main_cipher_mp.c
frameworks/trkr/: .gitignore
frameworks/trkr/apps/trivium/: Cargo.toml  README.md  output.txt
frameworks/trkr/apps/trivium/benches/: kreyvium_bool.rs  kreyvium_byte.rs  kreyvium_shortint.rs  trivium_bool.rs  trivium_byte.rs  trivium_shortint.rs
frameworks/trkr/apps/trivium/src/: lib.rs
frameworks/trkr/apps/trivium/src/cpu_cycle/: cpucycle.rs  mod.rs
frameworks/trkr/apps/trivium/src/kreyvium/: test.rs
frameworks/trkr/apps/trivium/src/trivium/: test.rs
frameworks/yux/: CMakeLists.txt  backup_CMakeLists.txt
frameworks/yux/trancipher_yux/: .gitignore  CMakeLists.txt  README.md
frameworks/yux/trancipher_yux/tests/: CMakeLists.txt  test-trans-Yu2x-8-C1.cpp  test-trans-Yu2x-8-C16.cpp
frameworks/yux/trancipher_yux/transciphering/: trans-Yu2x-8-C1.cpp
frameworks/yux/yux_fhe/: .gitignore  CMakeLists.txt  README.md  bck_CMakeLists.txt
frameworks/yux/yux_fhe/symmetric/: Yux-F_p.cpp  Yux-F_p.h  spn-multi.cpp  spn-multi.h
frameworks/yux/yux_fhe/tests/: CMakeLists.txt  test-blockcipher-F_p.cpp  test-blockcipher.cpp  test-expand16.cpp  test-transciphering-F_p-1.cpp  test-transciphering-F_p-16.cpp  test-transciphering1.cpp  test-transciphering16.cpp  test-transciphering4.cpp
frameworks/yux/yux_fhe/transciphering/: expand.cpp  params.h  transciphering-F_p-1.cpp  transciphering-F_p-1.h  transciphering-F_p-16.cpp  transciphering-F_p-16.h  transciphering1.cpp  transciphering1.h  transciphering16.cpp  transciphering16.h  transciphering4.cpp  transciphering4.h  utils.cpp  utils.h
frameworks/yux/yux_fhe/utils/: utils.c  utils.h
(+158 files in other folders)
