[package]
name = "frast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.4.1", features = ["boolean", "shortint", "x86_64-unix"] }
aligned-vec = { version = "0.5.0" }
dyn-stack = { version = "0.9" }
rand = { version = "*" }
serde = { version = "*" }
bincode = { version = "*" }
sha3 = { version = "*" }
rayon = { version = "*", optional = true }
pulp = "0.18.8"
memory-stats = "1.2.0"
libc = "0.2"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
crossterm = "0.29.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[test]]
name = "frast"
harness = false

[[test]]
name = "negacyclic_dbr"
harness = false

[[bench]]
name = "bench_gen_pbs"
harness = false

[[bench]]
name = "bench_frast"
harness = false

[[bench]]
name = "bench_setup"
harness = false

[[bench]]
name = "bench_online"
harness = false

[features]
default = ["monothread"]
monothread = []
multithread = ["rayon"]
