[package]
name = "homomorphic_transistor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
sha3 = "0.10.8"
tfhe = { version = "0.5.0", path = "../tfhe-rs-odd/tfhe", features = ["gadget", "x86_64-unix"]}
