[package]
name = "tfhe-trivium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-stats = "1.2.0"
rayon = { workspace = true }
tfhe = { path = "../../tfhe", features = [ "boolean", "shortint", "integer" ] }
libc = "0.2"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
crossterm = "0.29.0"
bincode = "1.3.3"

# for benchmark utils
[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ]}

[[bench]]
name = "trivium"
harness = false

